added scroll behavior/updated page links

--- a/green/assets/css/main.css
+++ b/green/assets/css/main.css
@@ -1,3 +1,6 @@
+html{
+	scroll-behavior: smooth;
+}
 
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600,900,300italic,600italic,900italic");
 
