--- a/green/assets/css/main.css
+++ b/green/assets/css/main.css
@@ -2145,7 +2145,7 @@ input, select, textarea {
 		}
 
 		form > .fields {
-			background-color: red;
+			
 			display: -moz-flex;
 			display: -webkit-flex;
 			display: -ms-flex;
@@ -3523,10 +3523,12 @@ input, select, textarea {
 			display: block;
 			width: 100%;
 			margin: 0 0 2rem 0;
+			border-radius: 10px;
 		}
 
 			.posts article .image img {
 				width: 100%;
+				height: 250px;
 			}
 
 		.posts article > :last-child {
